# ffi-opencc

./: Cargo.toml  README.md  build.rs  composer.json
examples/: example.php
lib/: ffi_opencc.h  libffi_opencc.dylib  libopencc.so.1.1.2
src/: OpenCC.php  lib.rs
