[package]
name = "ffi_opencc"
version = "0.1.0"
authors = ["zhoutianliang <mfkgdyve@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
###
[lib]
name = "ffi_opencc"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.18.0"

[dependencies.opencc-rust]
version = "1.1.7"
default-features = false